# zernike3d

./: .gitignore  Makefile  README.md
other/: README  build_gauss.nb  build_s_data.nb
polyquad_results/: README  build_c_rule.nb  q101_2007.txt  q11_28.txt  q13_37.txt  q17_60.txt  q21_87.txt  q21_88.txt  q25_120.txt  q25_123.txt  q25_126.txt  q2_3.txt  q31_181.txt  q31_190.txt  q37_255.txt  q37_264.txt  q3_6.txt  q43_348.txt  q43_360.txt  q49_450.txt  q49_475.txt  q51_501.txt  q57_628.txt  q5_7.txt  q65_814.txt  q73_1030.txt  q7_13.txt  q7_15.txt  q81_1263.txt  q81_1356.txt  q91_1632.txt  q91_1705.txt  q9_19.txt  r101_2007.txt  r11_28.txt  r13_37.txt  r17_60.txt  r21_87.txt  r21_88.txt  r25_120.txt  (+24 more)
src/: CMakeLists.txt  Doxyfile  Doxyfile.in  MakeShape.cpp  Shape2Invariant.cpp  Shape2Zernike.cpp  Zernike2Shape.cpp  arg_parse.hpp  essai.cpp  gauss.cpp  gauss.hpp  iotools.cpp  iotools.hpp  makeOFF.cpp  mesh.cpp  mesh.hpp  moments.cpp  moments.hpp  parallel.hpp  rzm.cpp  scratch.cpp  triangle.cpp  triangle.hpp  vec.cpp  vec.hpp  version.hpp.in  zernike.cpp  zernike.hpp  zernike_data.cpp  zernike_data.hpp  zernike_def.hpp  zm.cpp
src/cmake/: FindGMP.cmake
src/geom/: CMakeLists.txt  mesh.cpp  mesh.hpp  neldermead.cpp  neldermead.hpp  triangle.cpp  triangle.hpp
src/invariants/: CMakeLists.txt  coefs.cpp  coefs.hpp  invariants.cpp  invariants.hpp  k_distance.cpp  k_distance.hpp  largeint.cpp  largeint.hpp  s_root_data.cpp  s_root_data.hpp  s_root_data_100.cpp  s_root_data_50.cpp  sphericalbessel.cpp  sphericalbessel.hpp
src/testdata/: blork.off  blork.zm  cube.off
src/tools/: CMakeLists.txt  arg_parse.hpp  brent.cpp  brent.hpp  iotools.cpp  parallel.hpp
src/zernike/: CMakeLists.txt  moments.cpp  moments.hpp  zernike.cpp  zernike.hpp
